--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rest-with-node",
+  "name": "ash",
   "version": "1.0.0",
   "description": "",
   "main": "expressServer.js",
@@ -9,7 +9,7 @@
     "express": "^4.13.3",
     "request": "^2.65.0",
     "mongoose": "^4.4.19 ",
-    "socket.io": "^1.4.6"
+    "mongo-migrate": "^0.1.0"
   },
   "devDependencies": {
     "sockjs": "^0.3.17"
